--- a/client/locker.html
+++ b/client/locker.html
@@ -22,5 +22,6 @@
     <!-- <script src="./app/main.js"></script> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   </body>
+  <script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js"></script>
  <script src="./bundle.js"></script>
 </html>
